// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VenuePage (general) should match snapshot (authenticated) 1`] = `
<div
  className="c-page-view"
>
  <VenueData
    actions={
      Object {
        "favoriteAdd": [MockFunction],
        "favoriteRemove": [MockFunction],
        "friendAdd": [MockFunction],
        "friendConfirm": [MockFunction],
        "friendDismiss": [MockFunction],
        "friendGetList": [MockFunction],
        "friendRemove": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSaveAddress": [MockFunction],
        "metaSaveAvatar": [MockFunction],
        "metaSetAddress": [MockFunction],
        "metaSetAvatar": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetReady": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "metaToggleSettings": [MockFunction],
        "rsvpAdd": [MockFunction],
        "rsvpDismiss": [MockFunction],
        "rsvpGetList": [MockFunction],
        "rsvpRemove": [MockFunction],
        "userClearState": [MockFunction],
        "userGetItem": [MockFunction],
        "userGetList": [MockFunction],
        "userSetSearch": [MockFunction],
        "userToggleBlock": [MockFunction],
        "userToggleRange": [MockFunction],
        "venueClearForm": [MockFunction],
        "venueClearState": [MockFunction],
        "venueGetItem": [MockFunction],
        "venueGetList": [MockFunction],
        "venueSetMessage": [MockFunction],
        "venueSetOpen": [MockFunction],
        "venueSetPause": [MockFunction],
        "venueSetPhoto": [MockFunction],
        "venueSetSearch": [MockFunction],
        "venueSetStart": [MockFunction],
        "venueSetTime": [MockFunction],
        "venueToggleRange": [MockFunction],
        "venueToggleSort": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "address": "",
          "avatar": "",
          "delete": false,
          "settings": false,
        },
        "errors": Array [],
        "loading": 0,
        "log": Array [],
        "notifications": Object {
          "friends": Array [],
          "rsvps": Array [],
        },
        "ready": false,
        "user": Object {
          "auth": Object {
            "id": "",
            "provider": "",
          },
          "data": Object {
            "address": "",
            "app": "nightlife-app",
            "avatar": "",
            "blocks": Array [],
            "distance": 0,
            "favorites": Array [],
            "friends": Array [],
            "location": null,
            "restricted": false,
          },
          "id": "",
          "name": "",
          "type": "auth",
        },
        "users": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
          },
        },
        "venues": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
            "sort": false,
          },
          "page": Object {
            "form": Object {
              "message": "",
              "open": false,
              "time": "",
            },
            "photos": Object {
              "pause": false,
              "photo": "",
              "start": false,
            },
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "venue": Object {
          "coordinates": Object {
            "latitude": 0,
            "longitude": 0,
          },
          "display_phone": "",
          "distance": 0,
          "favorites": Array [],
          "hours": Array [],
          "id": "",
          "image_url": "",
          "location": Object {
            "display_address": Array [],
          },
          "name": "",
          "photos": Array [],
          "rating": 0,
          "rsvps": Array [],
          "url": "",
        },
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <VenueControls
    actions={
      Object {
        "favoriteAdd": [MockFunction],
        "favoriteRemove": [MockFunction],
        "friendAdd": [MockFunction],
        "friendConfirm": [MockFunction],
        "friendDismiss": [MockFunction],
        "friendGetList": [MockFunction],
        "friendRemove": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSaveAddress": [MockFunction],
        "metaSaveAvatar": [MockFunction],
        "metaSetAddress": [MockFunction],
        "metaSetAvatar": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetReady": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "metaToggleSettings": [MockFunction],
        "rsvpAdd": [MockFunction],
        "rsvpDismiss": [MockFunction],
        "rsvpGetList": [MockFunction],
        "rsvpRemove": [MockFunction],
        "userClearState": [MockFunction],
        "userGetItem": [MockFunction],
        "userGetList": [MockFunction],
        "userSetSearch": [MockFunction],
        "userToggleBlock": [MockFunction],
        "userToggleRange": [MockFunction],
        "venueClearForm": [MockFunction],
        "venueClearState": [MockFunction],
        "venueGetItem": [MockFunction],
        "venueGetList": [MockFunction],
        "venueSetMessage": [MockFunction],
        "venueSetOpen": [MockFunction],
        "venueSetPause": [MockFunction],
        "venueSetPhoto": [MockFunction],
        "venueSetSearch": [MockFunction],
        "venueSetStart": [MockFunction],
        "venueSetTime": [MockFunction],
        "venueToggleRange": [MockFunction],
        "venueToggleSort": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "address": "",
          "avatar": "",
          "delete": false,
          "settings": false,
        },
        "errors": Array [],
        "loading": 0,
        "log": Array [],
        "notifications": Object {
          "friends": Array [],
          "rsvps": Array [],
        },
        "ready": false,
        "user": Object {
          "auth": Object {
            "id": "",
            "provider": "",
          },
          "data": Object {
            "address": "",
            "app": "nightlife-app",
            "avatar": "",
            "blocks": Array [],
            "distance": 0,
            "favorites": Array [],
            "friends": Array [],
            "location": null,
            "restricted": false,
          },
          "id": "",
          "name": "",
          "type": "auth",
        },
        "users": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
          },
        },
        "venues": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
            "sort": false,
          },
          "page": Object {
            "form": Object {
              "message": "",
              "open": false,
              "time": "",
            },
            "photos": Object {
              "pause": false,
              "photo": "",
              "start": false,
            },
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "refresh": [Function],
        "venue": Object {
          "coordinates": Object {
            "latitude": 0,
            "longitude": 0,
          },
          "display_phone": "",
          "distance": 0,
          "favorites": Array [],
          "hours": Array [],
          "id": "",
          "image_url": "",
          "location": Object {
            "display_address": Array [],
          },
          "name": "",
          "photos": Array [],
          "rating": 0,
          "rsvps": Array [],
          "url": "",
        },
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <div
    className="c-page-info"
  >
    <MetaPageList
      local={
        Object {
          "heading": "Favorites",
          "list": Array [],
          "type": "user",
        }
      }
    />
    <MetaPageList
      local={
        Object {
          "heading": "RSVPs",
          "list": Array [],
          "type": "user",
        }
      }
    />
  </div>
</div>
`;

exports[`VenuePage (general) should match snapshot (default) 1`] = `
<div
  className="c-page-view"
>
  <VenueData
    actions={
      Object {
        "favoriteAdd": [MockFunction],
        "favoriteRemove": [MockFunction],
        "friendAdd": [MockFunction],
        "friendConfirm": [MockFunction],
        "friendDismiss": [MockFunction],
        "friendGetList": [MockFunction],
        "friendRemove": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSaveAddress": [MockFunction],
        "metaSaveAvatar": [MockFunction],
        "metaSetAddress": [MockFunction],
        "metaSetAvatar": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetReady": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "metaToggleSettings": [MockFunction],
        "rsvpAdd": [MockFunction],
        "rsvpDismiss": [MockFunction],
        "rsvpGetList": [MockFunction],
        "rsvpRemove": [MockFunction],
        "userClearState": [MockFunction],
        "userGetItem": [MockFunction],
        "userGetList": [MockFunction],
        "userSetSearch": [MockFunction],
        "userToggleBlock": [MockFunction],
        "userToggleRange": [MockFunction],
        "venueClearForm": [MockFunction],
        "venueClearState": [MockFunction],
        "venueGetItem": [MockFunction],
        "venueGetList": [MockFunction],
        "venueSetMessage": [MockFunction],
        "venueSetOpen": [MockFunction],
        "venueSetPause": [MockFunction],
        "venueSetPhoto": [MockFunction],
        "venueSetSearch": [MockFunction],
        "venueSetStart": [MockFunction],
        "venueSetTime": [MockFunction],
        "venueToggleRange": [MockFunction],
        "venueToggleSort": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "address": "",
          "avatar": "",
          "delete": false,
          "settings": false,
        },
        "errors": Array [],
        "loading": 0,
        "log": Array [],
        "notifications": Object {
          "friends": Array [],
          "rsvps": Array [],
        },
        "ready": false,
        "user": Object {},
        "users": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
          },
        },
        "venues": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
            "sort": false,
          },
          "page": Object {
            "form": Object {
              "message": "",
              "open": false,
              "time": "",
            },
            "photos": Object {
              "pause": false,
              "photo": "",
              "start": false,
            },
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "venue": Object {
          "coordinates": Object {
            "latitude": 0,
            "longitude": 0,
          },
          "display_phone": "",
          "distance": 0,
          "favorites": Array [],
          "hours": Array [],
          "id": "",
          "image_url": "",
          "location": Object {
            "display_address": Array [],
          },
          "name": "",
          "photos": Array [],
          "rating": 0,
          "rsvps": Array [],
          "url": "",
        },
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <div
    className="c-page-info"
  >
    <MetaPageList
      local={
        Object {
          "heading": "Favorites",
          "list": Array [],
          "type": "user",
        }
      }
    />
    <MetaPageList
      local={
        Object {
          "heading": "RSVPs",
          "list": Array [],
          "type": "user",
        }
      }
    />
  </div>
</div>
`;

exports[`VenuePage (general) should match snapshot (match) 1`] = `
<div
  className="c-page-view"
>
  <VenueData
    actions={
      Object {
        "favoriteAdd": [MockFunction],
        "favoriteRemove": [MockFunction],
        "friendAdd": [MockFunction],
        "friendConfirm": [MockFunction],
        "friendDismiss": [MockFunction],
        "friendGetList": [MockFunction],
        "friendRemove": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSaveAddress": [MockFunction],
        "metaSaveAvatar": [MockFunction],
        "metaSetAddress": [MockFunction],
        "metaSetAvatar": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetReady": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "metaToggleSettings": [MockFunction],
        "rsvpAdd": [MockFunction],
        "rsvpDismiss": [MockFunction],
        "rsvpGetList": [MockFunction],
        "rsvpRemove": [MockFunction],
        "userClearState": [MockFunction],
        "userGetItem": [MockFunction],
        "userGetList": [MockFunction],
        "userSetSearch": [MockFunction],
        "userToggleBlock": [MockFunction],
        "userToggleRange": [MockFunction],
        "venueClearForm": [MockFunction],
        "venueClearState": [MockFunction],
        "venueGetItem": [MockFunction],
        "venueGetList": [MockFunction],
        "venueSetMessage": [MockFunction],
        "venueSetOpen": [MockFunction],
        "venueSetPause": [MockFunction],
        "venueSetPhoto": [MockFunction],
        "venueSetSearch": [MockFunction],
        "venueSetStart": [MockFunction],
        "venueSetTime": [MockFunction],
        "venueToggleRange": [MockFunction],
        "venueToggleSort": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "address": "",
          "avatar": "",
          "delete": false,
          "settings": false,
        },
        "errors": Array [],
        "loading": 0,
        "log": Array [],
        "notifications": Object {
          "friends": Array [],
          "rsvps": Array [],
        },
        "ready": false,
        "user": Object {},
        "users": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
          },
        },
        "venues": Object {
          "data": Array [
            Object {
              "coordinates": Object {
                "latitude": 0,
                "longitude": 0,
              },
              "display_phone": "",
              "distance": 0,
              "favorites": Array [],
              "hours": Array [],
              "id": "id-a",
              "image_url": "",
              "location": Object {
                "display_address": Array [],
              },
              "name": "",
              "photos": Array [],
              "rating": 0,
              "rsvps": Array [],
              "url": "",
            },
          ],
          "list": Object {
            "range": false,
            "search": "",
            "sort": false,
          },
          "page": Object {
            "form": Object {
              "message": "",
              "open": false,
              "time": "",
            },
            "photos": Object {
              "pause": false,
              "photo": "",
              "start": false,
            },
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "venue": Object {
          "coordinates": Object {
            "latitude": 0,
            "longitude": 0,
          },
          "display_phone": "",
          "distance": 0,
          "favorites": Array [],
          "hours": Array [],
          "id": "id-a",
          "image_url": "",
          "location": Object {
            "display_address": Array [],
          },
          "name": "",
          "photos": Array [],
          "rating": 0,
          "rsvps": Array [],
          "url": "",
        },
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <div
    className="c-page-info"
  >
    <MetaPageList
      local={
        Object {
          "heading": "Favorites",
          "list": Array [],
          "type": "user",
        }
      }
    />
    <MetaPageList
      local={
        Object {
          "heading": "RSVPs",
          "list": Array [],
          "type": "user",
        }
      }
    />
  </div>
</div>
`;

exports[`VenuePage (list) should match snapshot (favorites) 1`] = `
<div
  className="c-page-view"
>
  <VenueData
    actions={
      Object {
        "favoriteAdd": [MockFunction],
        "favoriteRemove": [MockFunction],
        "friendAdd": [MockFunction],
        "friendConfirm": [MockFunction],
        "friendDismiss": [MockFunction],
        "friendGetList": [MockFunction],
        "friendRemove": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSaveAddress": [MockFunction],
        "metaSaveAvatar": [MockFunction],
        "metaSetAddress": [MockFunction],
        "metaSetAvatar": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetReady": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "metaToggleSettings": [MockFunction],
        "rsvpAdd": [MockFunction],
        "rsvpDismiss": [MockFunction],
        "rsvpGetList": [MockFunction],
        "rsvpRemove": [MockFunction],
        "userClearState": [MockFunction],
        "userGetItem": [MockFunction],
        "userGetList": [MockFunction],
        "userSetSearch": [MockFunction],
        "userToggleBlock": [MockFunction],
        "userToggleRange": [MockFunction],
        "venueClearForm": [MockFunction],
        "venueClearState": [MockFunction],
        "venueGetItem": [MockFunction],
        "venueGetList": [MockFunction],
        "venueSetMessage": [MockFunction],
        "venueSetOpen": [MockFunction],
        "venueSetPause": [MockFunction],
        "venueSetPhoto": [MockFunction],
        "venueSetSearch": [MockFunction],
        "venueSetStart": [MockFunction],
        "venueSetTime": [MockFunction],
        "venueToggleRange": [MockFunction],
        "venueToggleSort": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "address": "",
          "avatar": "",
          "delete": false,
          "settings": false,
        },
        "errors": Array [],
        "loading": 0,
        "log": Array [],
        "notifications": Object {
          "friends": Array [],
          "rsvps": Array [],
        },
        "ready": false,
        "user": Object {},
        "users": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
          },
        },
        "venues": Object {
          "data": Array [
            Object {
              "coordinates": Object {
                "latitude": 0,
                "longitude": 0,
              },
              "display_phone": "",
              "distance": 0,
              "favorites": Array [
                Object {
                  "id": "",
                  "user": Object {
                    "id": "",
                    "name": "",
                  },
                  "venue": Object {
                    "id": "",
                    "name": "",
                  },
                },
              ],
              "hours": Array [],
              "id": "id-a",
              "image_url": "",
              "location": Object {
                "display_address": Array [],
              },
              "name": "",
              "photos": Array [],
              "rating": 0,
              "rsvps": Array [],
              "url": "",
            },
          ],
          "list": Object {
            "range": false,
            "search": "",
            "sort": false,
          },
          "page": Object {
            "form": Object {
              "message": "",
              "open": false,
              "time": "",
            },
            "photos": Object {
              "pause": false,
              "photo": "",
              "start": false,
            },
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "venue": Object {
          "coordinates": Object {
            "latitude": 0,
            "longitude": 0,
          },
          "display_phone": "",
          "distance": 0,
          "favorites": Array [
            Object {
              "id": "",
              "user": Object {
                "id": "",
                "name": "",
              },
              "venue": Object {
                "id": "",
                "name": "",
              },
            },
          ],
          "hours": Array [],
          "id": "id-a",
          "image_url": "",
          "location": Object {
            "display_address": Array [],
          },
          "name": "",
          "photos": Array [],
          "rating": 0,
          "rsvps": Array [],
          "url": "",
        },
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <div
    className="c-page-info"
  >
    <MetaPageList
      local={
        Object {
          "heading": "Favorites",
          "list": Array [
            Object {
              "id": "",
              "user": Object {
                "id": "",
                "name": "",
              },
              "venue": Object {
                "id": "",
                "name": "",
              },
            },
          ],
          "type": "user",
        }
      }
    />
    <MetaPageList
      local={
        Object {
          "heading": "RSVPs",
          "list": Array [],
          "type": "user",
        }
      }
    />
  </div>
</div>
`;

exports[`VenuePage (list) should match snapshot (rsvps) 1`] = `
<div
  className="c-page-view"
>
  <VenueData
    actions={
      Object {
        "favoriteAdd": [MockFunction],
        "favoriteRemove": [MockFunction],
        "friendAdd": [MockFunction],
        "friendConfirm": [MockFunction],
        "friendDismiss": [MockFunction],
        "friendGetList": [MockFunction],
        "friendRemove": [MockFunction],
        "metaAddErrors": [MockFunction],
        "metaCloseError": [MockFunction],
        "metaGetUser": [MockFunction],
        "metaLogAction": [MockFunction],
        "metaNoOp": [MockFunction],
        "metaSaveAddress": [MockFunction],
        "metaSaveAvatar": [MockFunction],
        "metaSetAddress": [MockFunction],
        "metaSetAvatar": [MockFunction],
        "metaSetLoading": [MockFunction],
        "metaSetReady": [MockFunction],
        "metaSetState": [MockFunction],
        "metaTimeoutError": [MockFunction],
        "metaToggleDelete": [MockFunction],
        "metaToggleSettings": [MockFunction],
        "rsvpAdd": [MockFunction],
        "rsvpDismiss": [MockFunction],
        "rsvpGetList": [MockFunction],
        "rsvpRemove": [MockFunction],
        "userClearState": [MockFunction],
        "userGetItem": [MockFunction],
        "userGetList": [MockFunction],
        "userSetSearch": [MockFunction],
        "userToggleBlock": [MockFunction],
        "userToggleRange": [MockFunction],
        "venueClearForm": [MockFunction],
        "venueClearState": [MockFunction],
        "venueGetItem": [MockFunction],
        "venueGetList": [MockFunction],
        "venueSetMessage": [MockFunction],
        "venueSetOpen": [MockFunction],
        "venueSetPause": [MockFunction],
        "venueSetPhoto": [MockFunction],
        "venueSetSearch": [MockFunction],
        "venueSetStart": [MockFunction],
        "venueSetTime": [MockFunction],
        "venueToggleRange": [MockFunction],
        "venueToggleSort": [MockFunction],
      }
    }
    data={
      Object {
        "account": Object {
          "address": "",
          "avatar": "",
          "delete": false,
          "settings": false,
        },
        "errors": Array [],
        "loading": 0,
        "log": Array [],
        "notifications": Object {
          "friends": Array [],
          "rsvps": Array [],
        },
        "ready": false,
        "user": Object {},
        "users": Object {
          "data": Array [],
          "list": Object {
            "range": false,
            "search": "",
          },
        },
        "venues": Object {
          "data": Array [
            Object {
              "coordinates": Object {
                "latitude": 0,
                "longitude": 0,
              },
              "display_phone": "",
              "distance": 0,
              "favorites": Array [],
              "hours": Array [],
              "id": "id-a",
              "image_url": "",
              "location": Object {
                "display_address": Array [],
              },
              "name": "",
              "photos": Array [],
              "rating": 0,
              "rsvps": Array [
                Object {
                  "date": 0,
                  "hidden": Array [],
                  "id": "",
                  "message": "",
                  "time": "",
                  "user": Object {
                    "id": "",
                    "name": "",
                  },
                  "venue": Object {
                    "id": "",
                    "name": "",
                  },
                },
              ],
              "url": "",
            },
          ],
          "list": Object {
            "range": false,
            "search": "",
            "sort": false,
          },
          "page": Object {
            "form": Object {
              "message": "",
              "open": false,
              "time": "",
            },
            "photos": Object {
              "pause": false,
              "photo": "",
              "start": false,
            },
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    local={
      Object {
        "venue": Object {
          "coordinates": Object {
            "latitude": 0,
            "longitude": 0,
          },
          "display_phone": "",
          "distance": 0,
          "favorites": Array [],
          "hours": Array [],
          "id": "id-a",
          "image_url": "",
          "location": Object {
            "display_address": Array [],
          },
          "name": "",
          "photos": Array [],
          "rating": 0,
          "rsvps": Array [
            Object {
              "date": 0,
              "hidden": Array [],
              "id": "",
              "message": "",
              "time": "",
              "user": Object {
                "id": "",
                "name": "",
              },
              "venue": Object {
                "id": "",
                "name": "",
              },
            },
          ],
          "url": "",
        },
      }
    }
    location={Object {}}
    match={Object {}}
    staticContext={Object {}}
  />
  <div
    className="c-page-info"
  >
    <MetaPageList
      local={
        Object {
          "heading": "Favorites",
          "list": Array [],
          "type": "user",
        }
      }
    />
    <MetaPageList
      local={
        Object {
          "heading": "RSVPs",
          "list": Array [
            Object {
              "date": 0,
              "hidden": Array [],
              "id": "",
              "message": "",
              "time": "",
              "user": Object {
                "id": "",
                "name": "",
              },
              "venue": Object {
                "id": "",
                "name": "",
              },
            },
          ],
          "type": "user",
        }
      }
    />
  </div>
</div>
`;
